[package]
name = "winit-async"
version = "0.1.0"
authors = ["Osspial <osspial@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = {git = "https://github.com/rust-windowing/winit", branch="redraw-requested-2.0"}
